--- a/public/main.css
+++ b/public/main.css
@@ -11,3 +11,34 @@
   width: auto;
   max-height: 65px;
 }
+
+.√-add {
+  text-align: center;
+  color: white;
+  background: green;
+  border: 2px solid green;
+  border-radius: 5px;
+  height: 30px;
+  width: 30px;
+  font-size: 16px;
+  line-height: 26px;
+  margin-right: 30px;
+  padding: 0 0 0 1px;
+  float: right;
+}
+
+
+#personal-info img {
+  max-height: 300px;
+  max-width: 400px;
+  width: auto;
+  height: auto;
+  border-radius: 5px;
+  margin-left: 0;
+  margin-bottom: 5px;
+}
+
+body {
+  background-image: url("/images/45degreee_fabric.png");
+}
+
